--- a/Process Book/title.tex
+++ b/Process Book/title.tex
@@ -10,15 +10,15 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Pheme: Birds of a Feather Tweet Together} \\[0.4cm]
+{ \LARGE \bfseries Pheme: \\ Birds of a Feather Tweet Together} \\[0.4cm]
 
 \HRule \\[1.5cm]
 
 % Author and supervisor
-\begin{minipage}{0.4\textwidth}
+\begin{minipage}{0.6\textwidth}
 \begin{flushleft} \large
 \emph{Authors:}\\
-Peter Zhang and Carl Jackson
+Carl Jackson and Peter Zhang
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{0.4\textwidth}
