--- a/Process Book/Project_2.tex
+++ b/Process Book/Project_2.tex
@@ -46,7 +46,7 @@ Using Twitter's API, we pulled tweets, which contained several relevant pieces o
 \end{enumerate}
 
 \subsection{Scraping Method}
-For Carlllllll. Tell story like this:
+%% For Carlllllll. Tell story like this:
 \begin{enumerate}
 \item Normal twitter stream is all historical.
 \item Want realtime twitter data.
@@ -85,17 +85,10 @@ Our first task was to decide how to actually identify clusters of tweets; we kne
 \end{enumerate}
 
 \subsubsection{Visualizing Clusters}
-Once we decided upon the algorithm by which we would identify clusters, we had to decide how to visualize them. Initially, we had decided 
+Once we decided upon the algorithm by which we would identify clusters, we had to decide how to visualize them. Initially, we considered leaving tweets as the original google maps marker, and connecting tweets in a cluster with lines indicating which . Next, we had to decide
 
 \section{Visualizations} 
 
-\subsection{Colors} 
 \section{Conclusion}
-Through this process of Exploratory Data Analysis, I've identified several interesting relationships between game usage statistics and various game attributes, as well as relationships between different game attributes. That being said, if I had more time, I would be interested in further investigating this data in the following ways:
-\begin{enumerate}
-\item Examine the relationship between hourly game usage statistics and price, language count, ESRB rating, metacritic rating, etc.
-\item Identify any differences between hourly game usage statistics on week and weekend days.
-\item Scrape data for games other than games in the top 100 games by current user count, to get a richer picture of how various game attributes affect to each other.
-\end{enumerate}
-Furthermore, number 3 on this list emphasizes a general weakness with the data I used: I only collected data for the top 100 games by current user count at the current date and time. This data collection method likely introduced some artifacts into the data, like the dropoff of current users playing racing games to zero at certain times of day, and thus all results presented above should be regarded with caution; further investigation is needed to confirm these trends. 
+
 \end{document}
